# codebase-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: codebase-explorer.md
commands/: analyze.md  compare.md  find-entries.md  trace.md
docs/: claude_skills_best_practices_audit.md  security.md  usage.md  what-runs-on-your-machine.md
internal/log/: log_2026-02-14.md
skills/code-exploration/: SKILL.md
skills/codebase-analyzer/: SKILL.md  workflows.md
skills/codebase-analyzer/references/: llmfiles-reference.md  plan-templates.md  user-journeys.md  workflows.md
skills/codebase-analyzer/scripts/: analyze.py  compare.py  find_entries.py  trace.py
skills/codebase-analyzer/scripts/internal/: __init__.py  file_utils.py  output.py
skills/debugging/: SKILL.md
skills/documentation/: SKILL.md
skills/import-tracing/: SKILL.md
skills/import-tracing/references/: llmfiles-flags.md
skills/reference-matching/: SKILL.md
src/codebase_analyzer/: __init__.py  analyze.py  compare.py  find_entries.py  trace.py
src/codebase_analyzer/internal/: __init__.py  llmfiles_wrapper.py  output.py
tests/: __init__.py  test_analyze.py  test_compare.py  test_core_functions.py  test_find_entries.py  test_trace.py
tests/fixtures/sample_project/: main.py
tests/fixtures/sample_project/core/: engine.py
tests/fixtures/sample_project/utils/: helpers.py
