[project]
name = "codebase-analyzer"
version = "1.0.4"
description = "AST-based import tracing and codebase analysis"
requires-python = ">=3.11"
authors = [{ name = "Fred Bliss" }]
dependencies = [
    "llmfiles @ git+https://github.com/fblissjr/llmfiles",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
codebase-trace = "codebase_analyzer.trace:main"
codebase-analyze = "codebase_analyzer.analyze:main"
codebase-compare = "codebase_analyzer.compare:main"
codebase-find-entries = "codebase_analyzer.find_entries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_analyzer"]
