[project]
name = "codebase-analyzer"
version = "1.1.0"
description = "AST-based import tracing and codebase analysis"
requires-python = ">=3.11"
authors = [{ name = "Fred Bliss" }]
dependencies = [
    "llmfiles @ git+https://github.com/fblissjr/llmfiles",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["skills/codebase-analyzer/scripts"]
