[project]
name = "codebase-analyzer"
version = "2.0.1"
description = "AST-based import tracing and codebase analysis"
requires-python = ">=3.11"
authors = [{ name = "Fred Bliss" }]
dependencies = [
    "llmfiles @ git+https://github.com/fblissjr/llmfiles",
    "orjson>=3.11.7",
    "pyright>=1.1.408",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["skills/codebase-analyzer/scripts"]
